# vcr

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark_runner.py  vtr.toml
.github/workflows/: vcr-analysis.yml  vtr-analysis.yml
benches/: regression.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVED.md  CI_INTEGRATION.md  CLI_SCHEMAS.md  DEPLOYMENT_STRATEGY.md  OBSERVATION_PHASE.md  SESSION_SUMMARY.md  WHY_DETERMINISTIC.md
examples/golden_path/: README.md  expected_output.txt  query.json  simple.rs
schemas/: cpg_snapshot.fbs
scripts/: check-vcr-ci.sh  test_cli.sh
src/: lib.rs  types.rs
src/analysis/: mod.rs  pointer.rs  reachability.rs  taint.rs
src/api/: mod.rs
src/change/: detector.rs  mod.rs
src/config/: mod.rs
src/cpg/: builder.rs  epoch.rs  hash.rs  index.rs  mod.rs  model.rs
src/execution/: mod.rs  plan.rs  scheduler.rs  task.rs
src/io/: cold.rs  hot.rs  mod.rs  source_file.rs
src/memory/: arena.rs  epoch.rs  mod.rs
src/metrics/: collector.rs  mod.rs
src/optimizer/: cost.rs  mod.rs  planner.rs
src/parse/: mod.rs  parser.rs  tree_cache.rs
src/query/: engine.rs  mod.rs  primitives.rs
src/recovery/: mod.rs
src/repo/: mod.rs  scanner.rs
src/semantic/: epoch.rs  invalidation.rs  mod.rs  model.rs
src/semantic/cfg/: builder.rs  mod.rs
src/semantic/dfg/: builder.rs  mod.rs
src/semantic/symbols/: binding.rs  mod.rs  table.rs
src/simd/: filters.rs  mod.rs
src/storage/: mod.rs
tests/: cpg_determinism.rs  determinism.rs  phase4_validation.rs  semantic_determinism.rs
